--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
 
   ollama:
-    image: ollama/ollama
+    image: ollama/ollama:latest
     ports:
       - 11434:11434
     volumes:
@@ -15,7 +15,7 @@ services:
       - 8501:8501
     environment:
       - OLLAMA_API_BASE_URL=http://ollama:11434
-      - MODEL="orca-mini"
+      - MODEL=orca-mini
     networks:
       - net
 
